--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ code {
 </head>
 <body>
 
-<p>The HTML <code>button</code> tag defines a clickable button.</p>
+<p>The HTML <code>button</code> tag defines AAAclickable button.</p>
 <p>The CSS <code>background-color</code> property defines the background color of an element.</p>
 
 </body>
